--- a/cvup-ui-app/src/components/positions/PositionsList.module.scss
+++ b/cvup-ui-app/src/components/positions/PositionsList.module.scss
@@ -1,3 +1,8 @@
-.addCv{
-    display: none;
-}
+// .showAddCv .addCv {
+//   display: none;
+//   position: absolute;
+// }
+
+// .showAddCv:hover .addCv {
+//     display: flex;
+//   }
