--- a/cvup-ui-app/src/components/folders/FoldersList.module.scss
+++ b/cvup-ui-app/src/components/folders/FoldersList.module.scss
@@ -1,7 +1,24 @@
+.ulRoot{
+  position: relative;
+  display: block;
+  list-style: none;
+  padding-inline-start: 10px;
+  margin-top: 5px;
+  height: calc(100vh - 81px);
+  overflow-y: hidden,
+}
+.ulRoot:hover{
+  overflow: overlay;
+}
+
+.iconsDiv{
+ display: flex;
+ gap: 1rem;
+}
+
 .folderLine {
   background-color: inherit;
   display: flex;
-  width: 100%;
   height: 25px;
   padding: 5px 10px;
   align-items: center;
