--- a/cvup-ui-app/src/components/cands/CandsList.module.scss
+++ b/cvup-ui-app/src/components/cands/CandsList.module.scss
@@ -1,16 +1,49 @@
-.listItem{
-  display: flex;
-  flex-direction: row-reverse;
-  gap: 5;
- 
+.candList {
+  background-color: #fff;
+  height: calc(100vh - 96px);
+  overflow-y: scroll;
+  overflow-x: hidden;
+  direction: ltr;
+
+  &.isMobile {
+    font-size: 0.7rem;
+  }
 }
 
-.listItemSelected{
+.listItem {
+  display: flex;
+  width: 95%;
+  flex-direction: row-reverse;
+  gap: 5;
+}
+
+.listItemText {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-align: right;
+  padding-left: 1rem;
+  direction: rtl;
+
+  // &.isMobile{
+  //   padding-right: 3rem;
+  // }
+}
+
+.listItemDate {
+  white-space: nowrap;
+  font-size: 0.7rem;
+  
+  &.isMobile {
+    font-size: 0.6rem;
+  }
+}
+
+.listItemSelected {
   text-decoration: underline;
   font-weight: bold;
 }
 
-.listItemSelected:hover{
+.listItemSelected:hover {
   color: rgb(35, 112, 226) !important;
 }
- 
