--- a/cvup-ui-app/src/components/cands/CandsList.module.scss
+++ b/cvup-ui-app/src/components/cands/CandsList.module.scss
@@ -4,9 +4,9 @@
   overflow-x: hidden;
   direction: ltr;
 
-  &.isMobile {
-    font-size: 0.7rem;
-  }
+  // &.isMobile {
+  //   font-size: 0.7rem;
+  // }
 }
 
 .listItem {
