--- a/cvup-ui-app/src/App.css
+++ b/cvup-ui-app/src/App.css
@@ -40,7 +40,7 @@ body {
 }
 
 .ql-editor{
-  max-height: 250px;
+  height: 45vh;
   overflow: auto;
-  min-height:150px;
+  /* min-height:40vh; */
 }
