--- a/cvup-ui-app/src/components/cands/CandsList.module.scss
+++ b/cvup-ui-app/src/components/cands/CandsList.module.scss
@@ -20,10 +20,9 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   text-align: right;
-  padding-left: 1rem;
   direction: rtl;
-  display: flex;
   align-items: center;
+  margin-left: "0.5rem",
   // &.isMobile{
   //   padding-right: 3rem;
   // }
