--- a/cvup-ui-app/src/components/cands/CandsList.module.scss
+++ b/cvup-ui-app/src/components/cands/CandsList.module.scss
@@ -31,7 +31,7 @@
 .listItemDate {
   white-space: nowrap;
   font-size: 0.7rem;
-  text-align: right;
+  // text-align: right;
   min-width: 4.2rem;
   &.isMobile {
     font-size: 0.6rem;
@@ -53,7 +53,12 @@
 }
 
 .listItemPosStagesCurrent {
-  font-weight: 700;
-  text-decoration: underline;
-  font-size: 0.9rem;
+  // font-weight: 700;
+  // text-decoration: underline;
+  // font-size: 0.9rem;
+  border: 1px #bfbfbf  dashed;
+}
+
+.poslistItemCurrent {
+  border: 1px #28674b  dashed;
 }
