--- a/cvup-ui-app/src/components/cv/CvView.module.scss
+++ b/cvup-ui-app/src/components/cv/CvView.module.scss
@@ -9,3 +9,9 @@
     z-index: 9999;
   }
   
+  .custReviewTitle{
+    white-space: nowrap;
+    color: rgb(0, 63, 183);
+    font-size: 0.75rem;
+    font-weight: 600;
+  }
