--- a/cvup-ui-app/src/components/cands/CandsList.module.scss
+++ b/cvup-ui-app/src/components/cands/CandsList.module.scss
@@ -32,7 +32,7 @@
   white-space: nowrap;
   font-size: 0.7rem;
   // text-align: right;
-  min-width: 4.2rem;
+  min-width: 5.20rem;
   &.isMobile {
     font-size: 0.6rem;
   }
@@ -50,6 +50,9 @@
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
+  cursor: pointer;
+  padding-top: 0.32rem;
+  font-weight: 600;
 }
 
 .listItemPosStagesCurrent {
