--- a/cvup-ui-app/src/components/cands/CandsList.module.scss
+++ b/cvup-ui-app/src/components/cands/CandsList.module.scss
@@ -28,6 +28,12 @@
   // }
 }
 
+.listItemCity {
+  text-align: right;
+  font-weight: 100;
+  color: #9b9b9b;
+}
+
 .listItemDate {
   white-space: nowrap;
   font-size: 0.7rem;
