--- a/cvup-ui-app/src/components/cands/CandsList.module.scss
+++ b/cvup-ui-app/src/components/cands/CandsList.module.scss
@@ -3,9 +3,10 @@
   overflow-x: hidden;
   direction: ltr;
 
-  // &.isMobile {
-  //   font-size: 0.7rem;
-  // }
+  &.isMobile {
+    font-size: 0.8rem;
+    padding-bottom: 3rem;
+  }
 }
 
 .listItem {
