--- a/cvup-ui-app/src/components/futuresStatistics/ohlcControl/OhlcControl.module.scss
+++ b/cvup-ui-app/src/components/futuresStatistics/ohlcControl/OhlcControl.module.scss
@@ -3,13 +3,19 @@
   flex-direction: row;
   background-color: white;
   width: fit-content;
-  padding: 2px;
+
   .inputWrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    .title {
+      padding-left: 5px;
+      padding-bottom: 5px;
+      padding-top: 5px;
+    }
     .dateInput {
-      width: 9rem;
+      width: 10rem;
+      padding: 1rem;
       height: 40px;
       border: 1px solid #c5c5c5;
       outline: none;
@@ -21,7 +27,8 @@
       // color: aqua;
     }
     .ohlcInput {
-      width: 14rem;
+      width: 18rem;
+      padding: 1rem;
       height: 40px;
       border: 1px solid #c5c5c5;
       outline: none;
@@ -33,8 +40,9 @@
     }
     .error {
       color: rgb(196, 102, 102);
-      padding-top: 3px;
-      height: 21px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      height: 30px;
     }
   }
   // .txtInput:focus {
